# power-assert-monorepo

./: .eslintrc  .gitignore  .oxfmtrc.json  .oxlintrc.json  Cargo.toml  README.md  eslint.config.mjs  package-lock.json  package.json  power-assert.mjs  rollup.config.mjs  rust-toolchain.toml  tsconfig.build.json  tsconfig.json  tsconfig.tsnode.json
.github/workflows/: ci.yml  node.js.yml
docs/: adr-001-llm-friendly-output-formats.en.md  adr-002-step-by-step-format-implementation.en.md  adr-003-design-evolution-from-adr-002.en.md  adr-004-multiline-expression-position-calculation.md  adr-005-node-typescript-type-stripping-migration.md  adr-006-filtering-nodejs-generated-messages.en.md  adr-007-sync-register-hooks-migration.md  adr-008-eslint-to-oxc-migration.md
docs/investigations/: 2024-06-28-transpiler-core-multiline-expression-bug.en.md  2025-09-30-node-v24.9.0-test-output-changes.en.md
examples/: bowling_test.mjs
fixtures/ArrayExpression/: expected.mjs
fixtures/ArrowFunctionExpression/: expected.mjs
fixtures/AssignmentExpression/: expected.mjs  fixture.mjs
fixtures/AwaitExpression/: expected.mjs
fixtures/BinaryExpression/: expected.mjs  fixture.mjs
src/: argument-modification.mjs  assertion-visitor.mjs  controller-utils.mjs  create-node-with-loc.mjs  create-node.mjs  generate-canonical-code.mjs  index.mjs  location.mjs  parse-canonical-code.mjs  transformation.mjs
src/esm/: types.mts  (+2 more)
test/: assertion_visitor_test.mjs  diagram_test.mjs  helper.mjs  integration_test.mjs  source_map_test.mjs  test.mjs  transpiler_test.mjs
tests/: source_map_test.mts
(+122 files in other folders)
